# ChangeLog for app-text/bibletime
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/bibletime/ChangeLog,v 1.73 2015/02/18 01:47:11 creffett Exp $

  18 Feb 2015;  <creffett@gentoo.org> -bibletime-2.10.0.ebuild,
  bibletime-2.10.1.ebuild:
  Drop old version with qt5 handling problems

*bibletime-2.10.1 (15 Oct 2014)

  15 Oct 2014; Chris Reffett <creffett@gentoo.org> +bibletime-2.10.1.ebuild,
  +files/bibletime-2.10.1-qt5-printsupport.patch:
  Bump, add qt5 build option, fix build when qt5 is present

  06 Aug 2014; Patrick Lauer <patrick@gentoo.org> bibletime-2.10.0.ebuild,
  bibletime-2.9.1.ebuild:
  Make description more repoman-happy

*bibletime-2.10.0 (03 Feb 2014)

  03 Feb 2014; Chris Reffett <creffett@gentoo.org> +bibletime-2.10.0.ebuild:
  Version bump wrt bug 500218

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> bibletime-2.9.1.ebuild:
  Move Qt dependencies to the new category

  14 Feb 2013; Chris Reffett <creffett@gentoo.org> bibletime-2.9.1.ebuild:
  Bump EAPI, add subslot dep on icu wrt bug 455900.

  01 Oct 2012; Johannes Huber <johu@gentoo.org> -bibletime-2.3.3.ebuild:
  Remove old.

  08 Sep 2012; Anthony G. Basile <blueness@gentoo.org> bibletime-2.9.1.ebuild:
  Stable ppc, bug #434208

  07 Sep 2012; Johannes Huber <johu@gentoo.org> bibletime-2.9.1.ebuild:
  Stable for x86, wrt bug #434208

  07 Sep 2012; Agostino Sarubbo <ago@gentoo.org> bibletime-2.9.1.ebuild:
  Stable for amd64, wrt bug #434208

  07 Sep 2012; Johannes Huber <johu@gentoo.org> bibletime-2.9.1.ebuild:
  Dont call function that not exist by ago.

*bibletime-2.9.1 (04 Sep 2012)

  04 Sep 2012; Johannes Huber <johu@gentoo.org> +bibletime-2.9.1.ebuild,
  -bibletime-2.6.ebuild:
  Version bump wrt bug #344871, remove old. Fixes bug #418467.

*bibletime-2.6 (16 May 2010)

  16 May 2010; Steve Dibb <beandog@gentoo.org> +bibletime-2.6.ebuild:
  Version bump, bug 310273
