@@ -1,7 +1,29 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX bibletime-2.10.1-qt5-printsupport.patch 874 SHA256 476713fd15a438eaea4f64a1f2118d8406855cb0309bc134995276a291488a1a SHA512 51b29cbda5b494a0069f03b7d08c364a8e164ccf61ca025e5cbbd3e600f33178b868925a2abd165ead6c9f3ea875926c59ec82dcf363de9022fc03a2fd2afa9f WHIRLPOOL af3f9801d2d97fd43c29fe50f885d01a02a168e350ced319fbedb521ae4bdd0b0415fae96613230186905e09957bb35a336ecfb5da8152b585c320f41f02b96d
 DIST bibletime-2.10.1.tar.xz 3252680 SHA256 86d2d53913c08bce9f67c0d897639091d84e9d330527636cecd2b9008bf7ca91 SHA512 50f84eb1aefe911f1336ec7a23ea34ade1628383f35dca25330984787221214c0bc0cbc9f88f9540336949df02e76e769b7998d2eef3a15862e3038541564cc9 WHIRLPOOL 2ffc1b1b516d7fa94e842c957dc0be47be5e29ea015fcee2ff291093d0afc201af59d70b055193b420ff3acbc62386980b540eeb63ed92dbd1a741fb68b5be54
 DIST bibletime-2.9.1.tar.bz2 5968979 SHA256 308a86d4a1f63203e01438e75be8306377927498b5d0ae8769a4df3c828013b5 SHA512 6099e48fc3d54cb8362ec1a3965b372e60fd136d036dfd8d94b5e443ee5f27eb092162b653160bfc71d5366f79af35e22ee40d64ecd681f184bc4e90c1cd9e0a WHIRLPOOL 0677646ce099297321c4a519364b41254544f6d8660d72f9e76b6a8eafd08205915f40aef5bbc6463199ca0d272e28b926b13b0637ecdef1bc822256363cecf2
-EBUILD bibletime-2.10.1.ebuild 1396 SHA256 3ce85b0991790b5471f69068e5f6c5464b2869e3a6a6a97cd2099d51065c96c7 SHA512 2241170fbfc0aa666263126c79318645455217aaa2435a2d84a2d274b50786162ba9461389298e513674e0fcec6abf0ac697531d40efdd57b26968de912d6654 WHIRLPOOL bf0cad93c63a6de0878dbdd3010d22ad9d4a97d1eee587b23e393b0dc7d973cdfebf7efa9f40015615093574da33585724148a1a765ca7f62bf0abb60f33b95f
+EBUILD bibletime-2.10.1.ebuild 1411 SHA256 ea0cf48b972729dbf8a464c19f64e4adb38933316f2091ae2166c0ae8780c1fb SHA512 61157b6f4e677201cc7a1380156c1092395518aa7f8a47c11b8dd225c6a0144b6de134b66a8a7e61235b1da9ecce85c3d1da97cee296e376732c31fc1080db03 WHIRLPOOL 485aacc57cd3d60db681da40215ea45366a9d11771c28bf89f87a2d7b04bd2c959edc85e6919a97309cc9b4c702a693ff321dfea5f6d9366d5f8b837c6b76ce6
 EBUILD bibletime-2.9.1.ebuild 1092 SHA256 44db2655d5ac01a9b489f3b8feb1ed1f1ca0e6bff6aac356d99e842381fe1844 SHA512 ff6b6f00b52354865baa8b28ca28c643f6440c54055e760349b9e0b27e76868853cad7526c26ba62704bc9bb52d78e53350b2c045721a14882f622c722275087 WHIRLPOOL 2eb2fbacf8f14a00ce6487ffe6abc466e14bce53aeb3a555324a671e3ac4b53bd4c41283d7e187bcea5868cf28acfa3a24c58867ddba765568fd6444538f78a7
-MISC ChangeLog 9935 SHA256 c171cc9a363643187d01bad18abc018dd2289b3e0a5e24dbbf19289e9ecae32c SHA512 160c7ed612ba88e3041bc37835c30c7902c1b8bab2ce5b06af73892e01d609b67d0fc5f3cc0c1065a2cdadfd01c8364cfbb74eee8363361bb18cd129c664fb10 WHIRLPOOL ee682399114161cbb8c062922cb0822ee1781ab3ec69148fc112f7feb8ea67a1ca50bd366442f85107b34b8d7d8fc615481f2fcb4fa60d5b0711ffe1b3c2dae6
+MISC ChangeLog 10099 SHA256 7c5c826f1a91f1ec005c43f08fa623c6726b5c320493dbc4e0bb465631d82876 SHA512 26ab224f1a9eaf0af6c156496c8586939bee0b312de2174af7272d2f7d7ae67d9663815b8b539ef443847abab0e797852a77a93e27c298e5456cc847804b5f5f WHIRLPOOL e828bea9a23308be07c4526eb8dba3dc5a6fb2d9ba1fb5c450944e06dfb9f74fdc59b84145d27821722bc58bbd9689383ce54aaf47e019f98a90886bd05c3bdf
 MISC metadata.xml 436 SHA256 d59c32394540212a4cb547af0ffa112a9d6f0d4bc9dfacaeda9395c518d88141 SHA512 0d693ba775b318a49d8b6e7c87120e46c9372321c663d68f9e35f68b14ba57d82d6738bbb39bf27e2b46292d051828df5b0429d794fdf1beb92770b19fb92d0a WHIRLPOOL ce5e55cc7ecfdcb03e13a901a1c816081ac82724381f1bc000e1b11e58f1759def388aa6994bebd53b4ce01417e769e1b29c1e98ae3ccb54506cd98969a4a106
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCABmBQJVDIiRXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2M0VCRUYxOEZGRkExNTY5MDA5NEMzQzBD
+QTFBNTc1NUI2OUU3RUNCAAoJEMoaV1W2nn7LBrkP/1HbMHq7jH8qzPW0v20L45Pc
+h95DaOYqA2r+f6Ln/CR/CO35K61HkpZwe/n8qdR4ZhISnuNQewWgIpIG/bpgQwWr
+VPoJutFiC6gichxAV4pcmbFVDQAAXpSQakNxeVgaF1nPJWX7Dw9sF5SltnS5bizX
+efdleYbVXHzIw7T+041vcCuyzBFDCxbzfJVX0jIj5KjgIQ49i1KmSFWgg3431EYt
+uCHUlkuKMFi+vAj8YwqsiqX7BeYjU3QR6rP0+7dAyoqzX1iwt663ba2+MrPuqacV
+aK65Dr4YEd39cDH8Lh/oBERHmnGb6scRYZibL2JE80joSXLH/ElTwOFN4gOjDmh2
+zNn5u1HBQ8g1Ujd/yNBSBG9eBLPEJ7OjjQ69EXfeWt4CMRd9hsse2ZC0srpeWgVy
+jqvgcut4jZmF+z3dnHmV+on2R8UuYZA/f2emG08ta4hItei8gQkFQU56fVlhmDPZ
+LBHqYyQEmCW7vU1mvtby8ykwslUx55kGjaoBZSh1Xa3jYRpBDBiH/Qxt6qd76ZIj
+St01fSyTWxgOR403TbH27h+4Rtnlh3BSpkvqb6Q2fvfvtG2ZsO3zCir4lICOWS5Y
+kvk91i1gVp0SHjXwVh317G+KFHC7dAhg7Q+DHVisxR3n14N8MCu8EdtEDRbm/IFE
+Z0GG+rvzlvvU0RLe0EZE
+=7WN4
+-----END PGP SIGNATURE-----
