@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare test
-DEPEND=>=app-text/sword-1.6.0 >=dev-cpp/clucene-2.3.3.4 qt5? ( dev-qt/linguist-tools:5 dev-qt/qtcore:5 dev-qt/qtdbus:5 dev-qt/qtprintsupport:5 dev-qt/qtwidgets:5 ) !qt5? ( dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtwebkit:4 ) dev-libs/boost dev-libs/icu:= net-misc/curl sys-libs/zlib qt5? ( dev-qt/qttest:5 ) !qt5? ( dev-qt/qttest:4 ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DEPEND=>=app-text/sword-1.6.0 >=dev-cpp/clucene-2.3.3.4 qt5? ( dev-qt/linguist-tools:5 dev-qt/qtcore:5 dev-qt/qtdbus:5 dev-qt/qtprintsupport:5 dev-qt/qtwebkit:5 dev-qt/qtwidgets:5 ) !qt5? ( dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtwebkit:4 ) dev-libs/boost dev-libs/icu:= net-misc/curl sys-libs/zlib qt5? ( dev-qt/qttest:5 ) !qt5? ( dev-qt/qttest:4 ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
 DESCRIPTION=Qt Bible study application using the SWORD library
 EAPI=5
 HOMEPAGE=http://www.bibletime.info/
 IUSE=debug qt5
-KEYWORDS=~amd64 ~ppc ~x86
+KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
-RDEPEND=>=app-text/sword-1.6.0 >=dev-cpp/clucene-2.3.3.4 qt5? ( dev-qt/linguist-tools:5 dev-qt/qtcore:5 dev-qt/qtdbus:5 dev-qt/qtprintsupport:5 dev-qt/qtwidgets:5 ) !qt5? ( dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtwebkit:4 )
+RDEPEND=>=app-text/sword-1.6.0 >=dev-cpp/clucene-2.3.3.4 qt5? ( dev-qt/linguist-tools:5 dev-qt/qtcore:5 dev-qt/qtdbus:5 dev-qt/qtprintsupport:5 dev-qt/qtwebkit:5 dev-qt/qtwidgets:5 ) !qt5? ( dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtwebkit:4 )
 SLOT=0
 SRC_URI=mirror://sourceforge/project/bibletime/BibleTime%202/BibleTime%202%20source%20code/bibletime-2.10.1.tar.xz
 _eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=1079987cd7b159d2b3fc7b8bc00f4fe7
+_md5_=cfe73b78bdee1cf03317e4f3ec9df294
